# talks

./: README.md  index.html  style.css
cscs_19_10_18/: slides.md
exasol_19_10_28/: index.html  slides.md
muc++_18_01_25/: index.html  slides.md
parallel_19_21_02/: index.html  slides.md
parallel_19_21_02/code/: CMakeLists.txt  execution_resource.cpp  executor.cpp  saxpy.cpp  saxpy_numa.cpp  tasks.cpp
parallel_19_21_02/results/naples/scheduling/: hpx_scheduling_t1.json  hpx_scheduling_t10.json  hpx_scheduling_t12.json  hpx_scheduling_t14.json  hpx_scheduling_t16.json  hpx_scheduling_t18.json  hpx_scheduling_t2.json  hpx_scheduling_t20.json  hpx_scheduling_t22.json  hpx_scheduling_t24.json  hpx_scheduling_t26.json  hpx_scheduling_t28.json  hpx_scheduling_t30.json  hpx_scheduling_t32.json  hpx_scheduling_t34.json  hpx_scheduling_t36.json  hpx_scheduling_t38.json  hpx_scheduling_t4.json  hpx_scheduling_t40.json  hpx_scheduling_t42.json  hpx_scheduling_t44.json  hpx_scheduling_t46.json  hpx_scheduling_t48.json  hpx_scheduling_t6.json  hpx_scheduling_t8.json  omp_scheduling_t1.json  omp_scheduling_t10.json  omp_scheduling_t12.json  omp_scheduling_t14.json  omp_scheduling_t16.json  omp_scheduling_t18.json  omp_scheduling_t2.json  omp_scheduling_t20.json  omp_scheduling_t22.json  omp_scheduling_t24.json  omp_scheduling_t26.json  omp_scheduling_t28.json  omp_scheduling_t30.json  omp_scheduling_t32.json  omp_scheduling_t34.json  (+36 more)
parallel_19_21_02/results/naples/tasks/: coroutines_overhead.json  future_overhead.json  hpx_thread_overhead.json  omp_overhead.json  (+1 more)
(+81 files in other folders)
